@@ -4,3 +4,8 @@ FBCALL int          fb_SGNSingle        ( float x );
 FBCALL int          fb_SGNDouble        ( double x );
 FBCALL float        fb_FIXSingle        ( float x );
 FBCALL double       fb_FIXDouble        ( double x );
+
+FBCALL double       fb_CVDFROMLONGINT   ( long long l );
+FBCALL float        fb_CVSFROML         ( long l );
+FBCALL long         fb_CVLFROMS         ( float f );
+FBCALL long long    fb_CVLONGINTFROMD   ( double d );
