@@ -7,7 +7,9 @@ namespace fbc_tests.string_.mkcv
 
 sub mkConstTest cdecl ()
 
-	dim as string ss, si, sl, sll 'MK* constants not supported yet
+	''note: MK* constants not supported yet
+
+	dim as string ss, si, sl, sll
 
 	ss  = mkshort(   &h4847464544434241ll )
 	si  = mki(       &h4847464544434241ll )
@@ -40,15 +42,21 @@ end sub
 
 sub cvConstTest cdecl ()
 
-	const as longint s  = cvshort(   "ABCDEFGH" )
+	const as longint sh = cvshort(   "ABCDEFGH" )
 	const as longint i  = cvi(       "ABCDEFGH" )
 	const as longint l  = cvl(       "ABCDEFGH" )
 	const as longint ll = cvlongint( "ABCDEFGH" )
 
-	CU_ASSERT_EQUAL( s,              &h4241 )
+	#define s cvs( "ABCDEFGH" ) '' floating-point constants not supported yet
+	#define d cvd( "ABCDEFGH" )
+
+	CU_ASSERT_EQUAL( sh,             &h4241 )
 	CU_ASSERT_EQUAL( i,          &h44434241 )
 	CU_ASSERT_EQUAL( l,          &h44434241 )
 	CU_ASSERT_EQUAL( ll, &h4847464544434241 )
+
+	CU_ASSERT_EQUAL( s, 781.03521! )
+	CU_ASSERT_EQUAL( d, 1.5839800103804824e+40 )
 
 end sub
 
@@ -56,15 +64,41 @@ sub cvVarTest cdecl ()
 
 	dim as string sll = "ABCDEFGH"
 
-	dim as longint s  = cvshort(   sll )
+	dim as longint sh = cvshort(   sll )
 	dim as longint i  = cvi(       sll )
 	dim as longint l  = cvl(       sll )
 	dim as longint ll = cvlongint( sll )
 
-	CU_ASSERT_EQUAL( s,              &h4241 )
+	dim as single s = cvs( sll )
+	dim as double d = cvd( sll )
+
+	CU_ASSERT_EQUAL( sh,             &h4241 )
 	CU_ASSERT_EQUAL( i,          &h44434241 )
 	CU_ASSERT_EQUAL( l,          &h44434241 )
 	CU_ASSERT_EQUAL( ll, &h4847464544434241 )
+
+	CU_ASSERT_EQUAL( s, 781.03521! )
+	CU_ASSERT_EQUAL( d, 1.5839800103804824e+40 )
+
+end sub
+
+sub cvNumTest cdecl ()
+
+	dim as longint i  = cvi( 781.03521! )
+	dim as longint l  = cvl( 781.03521! )
+	dim as longint ll = cvlongint( 1.5839800103804824e+40 )
+
+	dim as single s  = cvs( &H44434241 )
+	dim as double d  = cvd( &H4847464544434241 )
+
+	CU_ASSERT_EQUAL( s,             781.03521! )
+	CU_ASSERT_EQUAL( i,             &h44434241 )
+	CU_ASSERT_EQUAL( l,             &h44434241 )
+	CU_ASSERT_EQUAL( d, 1.5839800103804824e+40 )
+	CU_ASSERT_EQUAL( ll,    &h4847464544434241 )
+
+	CU_ASSERT_EQUAL( mks( s ), mkl( l ) )
+	CU_ASSERT_EQUAL( mkd( d ), mklongint( ll ) )
 
 end sub
 
@@ -75,6 +109,7 @@ sub ctor () constructor
 	fbcu.add_test("mkVarTest", @mkVarTest)
 	fbcu.add_test("cvConstTest", @cvConstTest)
 	fbcu.add_test("cvVarTest", @cvVarTest)
+	fbcu.add_test("cvNumTest", @cvNumTest)
 
 end sub
 
