@@ -29,6 +29,7 @@ Version 0.25.0:
 - fbc now recognizes --version and [-]-help command line options
 - IIF now accepts strings (yetifoot/dkl)
 - win/initguid.bi win32 header
+- CVD(longint), CVS(integer), CVL(single), CVLONGINT(double), for reinterpreting directly between floating-point and integer representations without using strings
 
 [fixed]
 - libzip headers: zip_stat struct was unnecessarily named zip_stat_, breaking the libzip example
